# CRheoLab

./: .gitignore  CMakeLists.txt  Cell.cpp  Cell.h  Cell_data.txt  Face.cpp  Face.h  License.txt  Makefile  ReadME  calCellCentersVols.cpp  calCellCentersVols.h  main.cpp  run.sh
app/: CMakeLists.txt  CRheo.cpp
apps/CRheo/: Makefile
core/: CMakeLists.txt
doc/pages/: meshParameters.md  usefulFunctions.md
matFormats/: CMakeLists.txt
solvers/: CMakeLists.txt
src/: Boundary.h  BoundaryField.h  BoundaryFieldI.h  BoundaryI.h  CMakeLists.txt  Cell.h  Dictionary.h  Face.cpp  Face.h  IODictionary.cpp  IODictionary.h  IOObject.cpp  IOObject.h  IOobject.cpp  IOobject.h  Mesh.cpp  Mesh.h  RunTime.cpp  RunTime.h  VolField.h  VolFieldI.h  csrSpmat.cpp  csrSpmat.h  fvBoundaryConditionsField.h  fvBoundaryConditionsFieldI.h  fvFixedValuePatchField.h  lilSpmat.cpp  lilSpmat.h  main.cpp  run.sh  spmat.h  usefulFieldFunctions.h
src/App/: CMakeLists.txt
src/Matrix/: CMakeLists.txt
src/Mesh/: CMakeLists.txt
src/Solvers/: CMakeLists.txt
test/csrSpmat_test/: Makefile  csrspmat_test.cpp
test/lilSpmat_profile/: Makefile
test/lilSpmat_test/: Makefile  lilspmat_test.cpp
